# crypto-vision

./: .env.example  .gitignore  AGENT_PROMPTS.md  CONTRIBUTING.md  Dockerfile  PROMPTS.md  README.md  SECURITY.md  cloudbuild.yaml  dev.sh  docker-compose.yml  drizzle.config.ts  index.ts  openapi.yaml  package-lock.json  package.json  sectbot-llms-full.txt.md  tsconfig.json  vitest.config.ts
xtools/: README.md  __init__.py  cli.py  pyproject.toml  requirements.txt  setup.py
xtools/actions/: __init__.py  base.py  types.py
xtools/actions/engagement/: __init__.py
xtools/actions/engagement/bookmark/: __init__.py  bookmark_manager.py  bookmark_tweet.py  export_bookmarks.py  remove_bookmark.py
xtools/actions/engagement/comment/: __init__.py  ai_commenter.py  auto_commenter.py  reply_tweet.py
xtools/actions/engagement/like/: __init__.py  auto_liker.py  (+4 more)
xtools/actions/templates/: __init__.py
xtools/ai/: __init__.py  content_generator.py  crypto_analyzer.py  influencer_finder.py  sentiment_analyzer.py  smart_targeting.py  spam_detector.py
xtools/ai/providers/: __init__.py  anthropic.py  base.py  local.py  openai.py
xtools/analytics/: __init__.py
xtools/cli/: __init__.py  commands.py  main.py  utils.py
xtools/cli/commands/: __init__.py  ai.py  engage.py  follow.py  monitor.py  scrape.py  unfollow.py
xtools/core/: __init__.py  auth.py  browser.py  config.py  exceptions.py  rate_limiter.py  utils.py
xtools/docs/: FOLLOW_UNFOLLOW.md
xtools/exporters/: __init__.py  csv_exporter.py  json_exporter.py  sqlite_exporter.py
xtools/models/: __init__.py  tweet.py
xtools/monitoring/: __init__.py  unfollower_detector.py
xtools/notifications/: __init__.py  email.py  manager.py  telegram.py  webhook.py
xtools/scrapers/: __init__.py  base.py  followers.py  following.py  hashtag.py  likes.py  lists.py  media.py  profile.py  replies.py  search.py  thread.py  tweets.py
xtools/storage/: __init__.py  database.py  follow_tracker.py  snapshots.py  timeseries.py
xtools/tests/: __init__.py  test_exporters.py  test_follow_unfollow.py  test_models.py  test_rate_limiter.py  test_utils.py
(+1260 files in other folders)
