[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xtools"
version = "0.1.0"
description = "X/Twitter Automation Toolkit - Scraping and automation using browser automation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "XTools Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["twitter", "x", "scraping", "automation", "playwright"]

dependencies = [
    "playwright>=1.40.0",
    "aiofiles>=23.2.1",
    "pydantic>=2.5.0",
    "loguru>=0.7.2",
    "rich>=13.7.0",
    "tqdm>=4.66.1",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.19.0",
    "fake-useragent>=1.4.0",
    "click>=8.1.7",
]

[project.scripts]
xtools = "xtools.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.2",
    "pytest-cov>=4.1.0",
    "black>=23.12.1",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/xtools/xtools"
Repository = "https://github.com/xtools/xtools"
Documentation = "https://github.com/xtools/xtools#readme"

[project.scripts]
xtools = "xtools.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["xtools*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "C4", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
